// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupContentMenu renders as groupProfile when I am the owner 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            group.contentMenu.muteGroup
          
              </a>
              <!---->
            </li>
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/edit/groupid"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            admin.settings.name
          
              </a>
              <!---->
            </li>
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/edit/groupid/invites"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            group.contentMenu.inviteLinks
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupProfile, muted 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            group.contentMenu.unmuteGroup
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupProfile, not muted 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                exact="true"
                href="/"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            group.contentMenu.muteGroup
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;

exports[`GroupContentMenu renders as groupTeaser 1`] = `
<div>
  <v-popover-stub
    autohide="true"
    class="group-content-menu"
    container="body"
    delay="0"
    handleresize="true"
    offset="5"
    openclass="open"
    opengroup="0"
    placement="bottom-end"
    popoverarrowclass="tooltip-arrow popover-arrow"
    popoverbaseclass="tooltip popover"
    popoverclass="vue-popover-theme"
    popoverinnerclass="tooltip-inner popover-inner"
    popoverwrapperclass="wrapper"
    popperoptions="[object Object]"
    trigger="manual"
  >
    <button
      aria-label="group.contentMenu.menuButton"
      class="inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
      data-appearance="outline"
      data-test="group-menu-button"
      data-variant="primary"
      type="button"
    >
      <span
        class="inline-flex items-center"
      >
        <span
          class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
        </span>
      </span>
    </button>
     
    <div>
      <div
        class="group-menu-popover"
      >
        <nav
          class="ds-menu"
        >
          <ul
            class="ds-menu-list"
          >
            
          
          
            <li
              class="ds-menu-item ds-menu-item-level-0"
            >
              <a
                class="ds-menu-item-link"
                href="/groups/groupid"
              >
                <span
                  class="base-icon"
                >
                  <!---->
                </span>
                
            group.contentMenu.visitGroupPage
          
              </a>
              <!---->
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </v-popover-stub>
</div>
`;
